# appion

./: .gitignore  README.md  pyproject.toml  pysetup.sh  queries.py
appion/: __init__.py  setup.py
appion-classic/appionlib/: apDDStackMaker.py  apDisplay.py  apStack.py  appionLoop2.py  slurmHost.py
appion/appionlib/: apAgent.py  apAppionCamProcess.py  apCrud.py  apDBImage.py  apDDAlignStackMaker.py  apDDFrameAligner.py  apDDLoop.py  apDDMotionCor2Maker.py  apDDMotionCorrMaker.py  apDDResult.py  apDDStackMaker.py  apDDprocess.py  apDEprocess.py  apDatabase.py  apDefocalPairs.py  apDisplay.py  apDog.py  apEerProcess.py  apFalcon2Process.py  apFalcon3Process.py  apFile.py  apImageUpload.py  apImagicFile.py  apInstrument.py  apK2process.py  apMask.py  apParam.py  apParticle.py  apPeaks.py  apProject.py  apScriptLog.py  apSimFrameProcess.py  apStack.py  apThread.py  appionLoop2.py  appionScript.py  basicAgent.py  basicScript.py  filterLoop.py  particleLoop2.py  (+5 more)
appion/appionlib/apCtf/: ctfdisplay.py
appion/apps/ctfEstimation/: execute.py  logParser.py
appion/apps/motionCorrection/: __init__.py  execute.py  logParser.py  makeCommand.py
appion/base/: __init__.py  calc.py  cli.py  cluster.py  loop.py  retrieve.py  store.py  upload.py
appion/ctf/ctffind/: exec.py  log.py
appion/ctfEstimation/: logParser.py
appion/ctfestimation/: exec.py  store.py
appion/motionCorrection/: logParser.py
appion/motioncor/: __init__.py  cli.py  exec.py  log.py  params.py  retrieve.py  store.py  upload.py
appion/motioncorrection/: __init__.py  cli.py  store.py
db/models/: AcquisitionImageData.py  CameraEMData.py  CorrectorPlanData.py  __init__.py
docs/: Glossary.md
test/: construct_npz.py  construct_yaml.py  log_split.py  motioncor2_validation.json  test_base.py  test_base.yml  test_motioncor.py  test_motioncor_parse_logs.py  test_motioncorrection.py  test_motioncorrection.yml  test_motioncorrection_defect_map_4.npz
test/test_base_utils/: construct_yaml.py
test/test_ctfestimation_utils/: extract_ctffind4_params_from_slurm_logs.py
test/test_motioncorrection_utils/: construct_motioncor2_validation_json.py  construct_npz.py  construct_yaml.py  fix_motioncor2_validation.py  motioncor2_1.5.0_log.txt  motioncor2_1.6.4_log.txt  motioncor2_1.6.4_serial_log.txt
(+34 files in other folders)
