[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
name = "appion"
version = "2025.07.07b"
readme = "README.md"
description = "A data quality workflow for assessing images produced with Cryo-EM.  Performs motion correction and CTF estimation using user-provided inputs and information stored in a database that uses the Leginon data model."
license = "Apache-2.0"
authors = [
	{ name = "John Pellman", email = "john+github@libjpel.so"}, 
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
]
dependencies = [
  "django >= 4.2.20",
  "numpy",
  "mrcfile",
  "dask",
  "dask-jobqueue",
  "pexpect",
  "py-cpuinfo",
  "distro",
  "psutil",
  "argunparse",
  "pyyaml",
  "pytest",
  "parametrize_from_file"
]
# Need a newer version of Python or we wind up with partial initialization 
# issue when using LocalCluster
# https://github.com/dask/distributed/issues/4168
# https://bugs.python.org/issue43517
requires-python = ">=3.10,<4.0"

[project.urls]
Homepage = "https://github.com/nysbc/appion/"
Issues = "https://github.com/nysbc/appion/issues"
